# AutoOps

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  architecture_diagram.md  pyproject.toml
autoops/: __init__.py  cli.py
autoops/agents/: __init__.py  discovery.py  evidence.py  instrumentation.py  orchestrator.py  rca.py  remediation.py  splunk_config.py
autoops/commands/: demo_cmds.py  doctor.py  provider.py  splunk_cmds.py  telemetry_cmds.py
autoops/config/: __init__.py  store.py
autoops/interactive/: __init__.py  setup_wizard.py
autoops/llm/: __init__.py  azure_client.py  providers.py  router.py
autoops/models/: __init__.py  architecture.py  config.py  incident.py
autoops/scanner/: __init__.py  code_analyzer.py  infra_analyzer.py  repo_scanner.py
autoops/splunk/: __init__.py  alert_builder.py  bootstrap.py  dashboard_builder.py  (+2 more)
demo-app/: Dockerfile  database.py  docker-compose.yml  inject_bug.py  main.py  models.py  requirements.txt
docs/: ARCHITECTURE.md  BUILT_WITH.md
scripts/: install.ps1  install.sh  seed_provider_from_env.py
tests/: conftest.py  test_azure_client.py  test_bootstrap.py  test_cli_help.py  test_collector.py  test_config_store.py  test_configure_pipeline.py  test_discovery.py  test_docker_utils.py  test_evidence.py  test_instrumentation.py  test_models.py  test_rca.py  test_remediation.py  test_router.py  test_scanner.py  test_setup_wizard.py  test_splunk_builders.py  test_splunk_config.py  test_splunk_defaults.py
validation/: README.md  reset_fresh.sh  run_validation.py  validation_report.md
(+32 files in other folders)
