[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoops-ai"
version = "0.1.0"
description = "Autonomous observability and incident intelligence for any codebase"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AutoOps AI" }]
dependencies = [
    "anthropic>=0.40.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "keyring>=25.0.0",
    "mcp>=1.0.0",
    "openai>=1.40.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "questionary>=2.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.entry-points."pipx.run"]
autoops-ai = "autoops.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
autoops = "autoops.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoops*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
